--- a/public/css/Component/Customer/Customer_History_Top.css
+++ b/public/css/Component/Customer/Customer_History_Top.css
@@ -43,6 +43,14 @@
         flex-direction: column;
         align-items: center;
         justify-content: center;
+        opacity: 0;
+        transform: translateY(-30px);
+        transition: opacity 0.5s ease, transform 0.5s ease;
+    }
+
+    .main-right-bottom-two-content.slide-in {
+        opacity: 1;
+        transform: translateY(0);
     }
 
     .main-right-bottom-two-content i {
@@ -184,13 +192,12 @@
     .line {
         width: 93px;
         height: 3px !important;
-        background-color: var(--green-color-one);
     }
 
     .line1 {
         width: 93px;
         height: 3px !important;
-        background-color: none;
+        background-color: ;
     }
 
     .main-right-bottom {
@@ -251,6 +258,42 @@
         padding-left: 3.5%;
         width: 96.5%;
         background-color: white;
+    }
+
+    .main-right-bottom-container {
+        display: grid;
+        grid-template-rows: 10% 90%;
+        width: 100%;
+        height: 550px;
+    }
+
+    .main-right-bottom-container-top {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        margin-bottom: 20px;
+        margin-left: 20px;
+    }
+
+
+
+    .main-right-bottom-container-container {
+        width: 100%;
+        height: 100%;
+        overflow: hidden;
+    }
+
+
+    .main-right-bottom-top {
+        padding-left: 2.5%;
+        width: 97.5%;
+    }
+
+    .main-right-bottom-down {
+        width: 97.5%;
+        height: 100%;
+        overflow: scroll;
+        padding-left: 2.5%;
     }
 
 
