--- a/public/css/Component/Customer/Customer_Transfer_History.css
+++ b/public/css/Component/Customer/Customer_Transfer_History.css
@@ -1,5 +1,14 @@
 .Customer_Transfer_History {
 
+    #transfer p {
+        color: var(--green-color-one);
+        font-weight: 600;
+    }
+
+    #transfer p {
+        color: var(--green-color-one);
+        font-weight: 600;
+    }
 
     .table-header {
         grid-template-columns: 15% 20% 15% 20% 15% 15%;
