--- a/public/css/Component/Customer/Customer_Main_History.css
+++ b/public/css/Component/Customer/Customer_Main_History.css
@@ -7,11 +7,8 @@
 
     #discounts .line1 {
         color: var(--green-color-one);
-        font-weight: 600;
+        background-color: var(--green-color-one);
     }
-
-
-  
 
     .table-header {
         grid-template-columns: 17% 12% 12% 17% 13% 14% 15%;
