--- a/public/css/Component/CenterManager/CenterManager_Complaints.css
+++ b/public/css/Component/CenterManager/CenterManager_Complaints.css
@@ -68,21 +68,27 @@
             margin-left: 35%;
             margin-right: 2.5%;
         }
-
+    
         .dot {
-            width: 11px;
-            height: 11px;
+            width: 15.5px;
+            height: 15.5px;
             border-radius: 50%;
             background-color: #F13E3E;
-            margin-top: -14px;
-            margin-left: -12px;
+            margin-top: -11px;
+            margin-left: -15px;
+            color: var(--background-color-main);
+            font-size: 11px;
+            font-weight: 501;
+            box-sizing: border-box;
+            padding-left: 4.6px;
+            padding-top: 1.8px;
         }
-
+    
         .main-right-top-notification i {
             font-size: 29px;
             cursor: pointer;
         }
-
+    
         .notification_popup {
             height: 0;
             position: absolute;
@@ -102,22 +108,21 @@
             overflow: scroll;
             border: 1px solid #dcdde1;
         }
-
+    
         .notification_popup h1 {
             font-size: 19px;
             letter-spacing: 0.001rem;
-            margin-bottom: 13px;
             margin-top: 5px;
             margin-left: 8px;
         }
-
+    
         .notification_popup.active {
             height: 200px;
             padding: 10px;
             visibility: visible;
             opacity: 1;
         }
-
+    
         .notification {
             height: 43px !important;
             margin-top: 10px;
@@ -127,11 +132,11 @@
             font-size: 14px;
             cursor: pointer;
         }
-
+    
         .notification:hover {
             background-color: var(--notification-hover);
         }
-
+    
         .notification-green-dot {
             width: 11px;
             height: 11px;
@@ -139,32 +144,70 @@
             background-color: var(--green-color-one);
             margin-right: 10px;
         }
-
+    
+        .notification_right p {
+            font-size: 13px;
+        }
+    
+        .mark_as_read {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            cursor: pointer;
+        }
+    
+        .notification_cont {
+            overflow: scroll;
+            max-height: 150px;
+        }
+    
+        .mark_as_read button {
+            margin-top: 2px;
+            font-size: 13px;
+            text-align: center;
+            margin-top: 4px;
+            font-weight: 700;
+            border: none;
+            background-color: none !important;
+            background: none;
+            cursor: pointer !important;
+            color: var(--main-text-color);
+            margin-left: 5px;
+        }
+    
+        .mark_as_read button:hover{
+            color: var(--button-hover-green);
+        }
+    
+        .mark_as_read .bx {
+            font-size: 26px;
+        }
+    
         .main-right-top-profile {
             display: flex;
             margin-right: 40px;
         }
-
+    
         .main-right-top-profile img {
             width: 50px;
             height: 50px;
             margin-right: 15px;
             border-radius: 10px;
         }
-
+    
         .main-right-top-profile-cont {
             margin-top: 7px;
         }
-
+    
         .main-right-top-profile-cont h3 {
             font-size: 18px;
             letter-spacing: 0.03rem;
         }
-
+    
         .main-right-top-profile-cont p {
             font-size: 14px;
         }
-
+        
         .main-bottom {
             display: flex;
             align-items: center;
