--- a/public/css/style.css
+++ b/public/css/style.css
@@ -157,6 +157,7 @@
 @import url('Component/Admin/Admin_Center_Main_Request_Cancelled.css');
 @import url('Component/Admin/Admin_Center_Main_Request_Completed.css');
 @import url('Component/Admin/Admin_Center_Main_Waste_Handover.css');
+@import url('Component/Admin/Admin_Center_Main_Stock_Releases.css');
 
 @import url('Component/Admin/Admin_Reports.css');
 @import url('Component/Admin/Admin_Admin.css');
