--- a/public/css/Component/Admin/Admin_Center_Main_Stock_Releases.css
+++ b/public/css/Component/Admin/Admin_Center_Main_Stock_Releases.css
@@ -205,8 +205,8 @@
         background: var(--button-hover-green);
     }
 
-  /*collect details*/
-  .collect-details-pop {
+   /*Release garbage details popup*/
+   .release_garbage_details_popup {
     display: flex;
     position: fixed;
     top: 50%;
@@ -214,120 +214,84 @@
     transform: translate(-50%, -50%) scale(0);
     z-index: 4;
     align-items: center;
-    justify-content: center;
     flex-direction: column;
     overflow: hidden;
     transition: transform 0.4s ease-in, background-color 0.4s ease-in;
     box-shadow: var(--box-shadow);
     border-radius: 10px;
+    background-color: var(--background-color-main);
+    width: 47%;
+    height: 40%;
 }
 
-.collect-details-pop.active {
+.release_garbage_details_popup.active {
     transform: translate(-50%, -50%) scale(1);
 }
 
-.collect-details-pop-form {
-    box-sizing: border-box;
-    width: 100%;
-    background: var(--background-color-main);
-    border-radius: 10px !important;
-    top: 0;
-    position: relative;
-    text-align: center;
-    padding: 30px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    transition: transform 0.4s, top 0.4s;
-    flex-direction: column;
-    color: var(--main-text-color);
-}
-
-.collect-details-pop-form-top {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin-bottom: 25px;
-    font-size: 18px;
-}
-
-.collect-details-topic::before {
-    content: '';
-    position: absolute;
-    margin-top: 25px;
-    margin-left: 40px;
-    margin-bottom: 15px;
-    height: 3px;
-    width: 75px;
-    background: var(--green-color-one);
-}
-
-.collect-details-pop-form-close {
-    width: 25px;
-    height: 25px;
-    position: absolute;
-    top: 10px;
-    right: 10px;
+.release_garbage_details_popup img {
     width: 20px;
     height: 20px;
+    margin-left: 95%;
+    margin-top: 1%;
     cursor: pointer;
 }
 
-.collect-details-pop-form-content {
-    display: grid;
-    grid-template-columns: 70% 30%;
-    width: 80%;
-    background: var(--background-color-main);
-    box-shadow: var(--box-shadow);
-    border-radius: 10px;
-    padding: 10px 40px;
-    height: 300px;
+.release_garbage_details_popup h1 {
+    font-size: 21px;
+    letter-spacing: 0.01rem;
+    margin-top: 10px;
+    margin-bottom: 15px;
 }
 
-.collect-details-pop-form-content span {
-    width: 250px;
-}
+/* .release_garbage_details_popup h1::before{
+    content: '';
+    position: absolute;
+    margin-top: 26px;
+    margin-bottom: 25px;
+    height: 3px;
+    width: 64px;
+    margin-left: 14%;
+    background: var(--green-color-one);
 
-.collect-details-pop-form-content-labels {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-}
-
-.collect-details-pop-form-content-labels h3 {
-    font-weight: 300;
-    font-size: 14px;
-    margin-bottom: 5%;
-    width: 300px;
-    text-align: left;
-    margin-left: 20%;
-    color: #7c7c7d;
-}
-
-.collect-details-pop-form-content-right-values {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-end;
-    justify-content: center;
-}
-
-/* .collect-details-pop-form-content-right-values-cont h3 {
-    
 } */
 
-.collect-details-pop-form-content-right-values-cont {
-    display: flex;
-    margin-bottom: 11%;
+.release_garbage_details_popup h2 {
+    font-size: 14px;
+    margin-top: 5px;
+    font-weight: 500;
     
+
 }
 
-.collect-details-pop-form-content-right-values h3 {
-    font-size: 14px;
-    color: #767e95;
-    font-weight: 550;
-    
+.Eco_Credit_Per_Cont {
+    display: flex;
 }
+
+.Eco_Credit_Per_Cont .Cont {
+    display: flex;
+    flex-direction: column;
+    margin: 30px;
+    align-items: center;
+}
+
+.Eco_Credit_Per_Cont .Cont h3 {
+    font-size: 15px;
+    margin-bottom: 15px;
+    font-weight: 500;
+}
+
+.Eco_Credit_Per_Cont .Cont p {
+    font-size: 14px;
+}
+
+.Eco_Credit_Per_Cont .Cont .fas {
+    font-size: 29px;
+    margin-bottom: 15px;
+    color: #7c7c7d;
+ 
+
+}
+
 
 .overlay {
     position: fixed;
