--- a/public/css/Component/Customer/Customer_History_Top.css
+++ b/public/css/Component/Customer/Customer_History_Top.css
@@ -197,7 +197,6 @@
     .line1 {
         width: 93px;
         height: 3px !important;
-        background-color: ;
     }
 
     .main-right-bottom {
@@ -326,8 +325,6 @@
             width: 86px;
             height: 2px;
         }
-
-
     }
 
     @media screen and (max-width: 844px) {
@@ -350,6 +347,43 @@
 
         .main-right-top-search {
             margin-left: 1px;
+        }
+
+        .main-right-bottom-container {
+            width: 140%;
+            overflow-x: scroll;
+        }
+
+        .main-right-bottom-container-top {
+            width: 140%;
+            overflow-x: scroll;
+        }
+
+        .main-right-bottom-container-container {
+            width: 140%;
+            overflow-x: scroll;
+        }
+
+    }
+
+    @media screen and (max-width:700px) {
+        .notification_popup {
+            right: 20%;
+            width: 40%;
+        }
+
+        .main-right-top-search {
+            width: 35%;
+        }
+
+        .main-right-top-search i {
+            left: 10px;
+            margin-left: 10px;
+        }
+
+        .main-right-top-search input {
+            height: 28px;
+            margin-left: 10px;
         }
     }
 
