--- a/public/css/Component/Customer/Customer_Main_History.css
+++ b/public/css/Component/Customer/Customer_Main_History.css
@@ -39,6 +39,15 @@
         text-align: center !important;
     }
 
+    @media screen and (max-width:700px) {
+        .table-header {
+            grid-template-columns: 15% 20% 15% 20% 15% 15%;
+        }
+
+        .table-row {
+            grid-template-columns: 15% 20% 15% 20% 15% 15%;
+        }
+    }
 
 
 }
