--- a/public/css/Component/Customer/Customer_Request_Main.css
+++ b/public/css/Component/Customer/Customer_Request_Main.css
@@ -440,7 +440,26 @@
         }
 
         .notification_popup {
-            width: 25%;
+            width: 26%;
+        }
+    }
+
+    @media screen and (max-width:950px) {
+        .main-right-bottom {
+            width: 140%;
+            overflow-x: scroll;
+        }
+
+        .main-right-bottom-top {
+            width: 140%;
+        }
+
+        .main-right-bottom-down {
+            width: 140%;
+        }
+
+        .notification_popup {
+            width: 28%;
         }
     }
 
@@ -463,60 +482,84 @@
             width: 550px;
         }
 
-
+        .notification_popup {
+            top: 11%;
+            right: 10%;
+            width: 35%;
+        }
     }
 
-    @media screen and (max-width:950px) {
-        .main-right-top-notification {
-            margin-left: 5%;
+    @media screen and (max-width:660px) {
+        .notification_popup {
+            width: 35%;
+            right: 10%;
+        }
+
+      
+    }
+
+    @media screen and (max-width:540px) {
+        .main-right-bottom {
+            width: 160%;
+            overflow-x: scroll;
+        }
+
+        .main-right-bottom-top {
+            width: 160%;
+        }
+
+        .main-right-bottom-down {
+            width: 160%;
         }
 
         .notification_popup {
-            top: 11%;
-            width: 31%;
-            right: -22%;
+            width: 46%;
+            left: 15%;
         }
 
-        .notification_popup h1 {
-            font-size: 19px;
-            letter-spacing: 0.001rem;
-            margin-top: 5px;
-            margin-left: 8px;
-        }
+      
+    }
 
+    @media screen and (max-width: 844px) {
+        .main-right-top-notification {
+            margin-left: 5%;
+        }
         .main-right-top-search {
             margin-left: 1px;
         }
 
-        .notification {
-            height: 41px !important;
-            margin-top: 6px;
-            font-size: 13px;
+        .main-right-bottom-container {
+            width: 140%;
+            overflow-x: scroll;
         }
 
-        .notification_popup h1 {
-            font-size: 17px;
+        .main-right-bottom-container-top {
+            width: 140%;
+            overflow-x: scroll;
         }
 
+        .main-right-bottom-container-container {
+            width: 140%;
+            overflow-x: scroll;
+        }
+
+    }
+
+    @media screen and (max-width:700px) {
+    
         .main-right-top-search {
-            margin-left: 40px;
+            width: 35%;
         }
 
-        .main-right {
-            width: 170% !important;
+        .main-right-top-search i {
+            left: 10px;
+            margin-left: 10px;
         }
 
-    }
-
-    @media screen and (max-width:600px) {
-        .notification_popup {
-            top: 11%;
-            width: 36%;
-            right: -17%;
-        }
-
-        .personal-details-popup-form {
-            width: 550px;
+        .main-right-top-search input {
+            height: 28px;
+            margin-left: 10px;
         }
     }
+
 }
