--- a/public/css/Component/Home.css
+++ b/public/css/Component/Home.css
@@ -1,4 +1,263 @@
-.Home-main {
+.Home-main{
+    *{
+        box-sizing: border-box;
+        margin: 0;
+        padding: 0;
+        list-style: none;
+        text-decoration: none;
+        font-family: "Inter";
+      }
+    
+    .main{
+        max-width: 1280px;
+        margin: 0 auto;
+        scroll-behavior: smooth;
+    }
+
+    a {
+        text-decoration: none;
+        color: black;
+        font-size: 17px;
+        font-weight: 500;
+        text-transform: uppercase;
+    }
+
+    .signin-button{
+        font-size: 17px;
+        background-color: #1ca557;
+        color: white;
+        padding: 8px 25px;
+        border: none;
+        border-radius: 10px;
+        cursor: pointer;
+        transition: background-color 0.3s;
+        margin-left: 25px;
+    }
+
+    header{
+        position: fixed;
+        z-index: 10010;
+        top: 0;
+        left: 0;
+        right: 0;
+        max-width: 1280px;
+        margin: 0 auto;
+        background-color: white;
+    }
+
+    .nav {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding-top: 20px;
+        font-family: Inter ;
+        z-index: 10001;
+    }
+    
+    .logo img {
+        width: 64px;
+        height: 64px;
+    }
+    
+    .hamburger {
+        padding-right: 20px;
+        cursor: pointer;
+    }
+    
+    .hamburger .line {
+        display: block;
+        width: 30px;
+        height: 2px;
+        margin-bottom: 10px;
+        background-color: black;
+    }
+    
+    .nav__link {
+        position: absolute;
+        width: 94%;
+        z-index: 10001;
+        top: 66px;
+        left: 10px;
+        background-color: lightblue;
+    }
+    
+    .nav__link a {
+        display: block;
+        text-align: center;
+        padding: 10px 0;
+    }
+    
+    .nav__link a:hover {
+        background-color: #d8fcde;
+        border-radius: 10px;
+    }
+    
+    .hide {
+        display: none;
+    }
+
+
+    /* hero banner section */
+    .header-section {
+        margin-top: 100px;
+        display: flex;
+        flex-wrap: wrap;
+        align-items: center;
+        justify-content: center;
+        gap: 68px 42px;
+        padding: 42px 24px;
+        position: relative;
+        background-color: #ffffff;
+    }
+    
+    .header-section .header-content {
+        display: flex;
+        flex-direction: column;
+        min-width: 320px;
+        /* max-width: 620px; */
+        align-items: flex-start;
+        gap: 48px;
+        position: relative;
+        flex: 1;
+        flex-grow: 1;
+    }
+    
+    .header-section .title-subtitle {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        gap: 24px;
+        position: relative;
+        align-self: stretch;
+        width: 100%;
+        flex: 0 0 auto;
+    }
+    
+    .header-section .text-wrapper {
+        position: relative;
+        align-self: stretch;
+        margin-top: -1px;
+        font-family: Inter;
+        font-weight: 600;
+        color: #1ca557;
+        font-size: 20px;
+        letter-spacing:  0px;
+        line-height: 30px;
+        font-style: normal;
+    }
+    
+    .header-section .div {
+        position: relative;
+        align-self: stretch;
+        font-family: "Inter";
+        font-weight: 600;
+        color: var(--main-text-color);
+        font-size: 70px;
+        letter-spacing: 0px;
+        line-height: normal;
+        font-style: normal;
+
+    }
+    
+    .header-section .this-is-a-template {
+        position: relative;
+        align-self: stretch;
+        font-family: "Inter";
+        font-weight: 400;
+        color: var(--main-text-color);
+        font-size: 17px;
+        letter-spacing: 0px;
+        line-height: 27px;
+        font-style:normal;
+
+    }
+
+    .header-section .this-is-a-template b{
+        font-family: "Inter", Helvetica ;
+    }
+    
+    .header-section .button {
+        display: inline-flex;
+        align-items: center;
+        justify-content: center;
+        gap: 10px;
+        padding: 16px 32px;
+        border-radius: 8px;
+        position: relative;
+        flex: 0 0 auto;
+        background-color:#1ca557 ;
+    }
+    
+    .header-section .text-wrapper-2 {
+        position: relative;
+        width: fit-content;
+        margin-top: -1px;
+        font-family: "Inter", Helvetica;
+        font-weight: 600;
+        color: #fff;
+        font-size: 20px;
+        text-align: center;
+        letter-spacing: 0;
+        line-height: 30px;
+        white-space: nowrap;
+    }
+    
+    .header-section .headerimage {
+        position: relative;
+        flex: 1;
+        min-width: 320px;
+        /* max-width: 580px; */
+        flex-grow: 1;
+    
+    }
+
+      /* responsiveness */
+
+    /* navbar  */
+    @media screen and (min-width: 576px) {
+        .nav__link {
+
+            display: block;
+            position: static;
+            width: auto;
+            margin-right: 20px;
+            background: none;
+        }
+
+        .nav__link a {
+            display: inline-block;
+            padding: 15px 20px;
+        }
+
+        .hamburger {
+            display: none;
+        }
+    }
+    
+    /* body */
+    @media screen and (max-width: 576px) {
+        .header-section .header-content{
+            padding: 24px;
+        }
+        .header-section .div{
+            font-size: 32px;
+        }
+        .header-section .button{
+            padding: 12px 24px;
+        }
+
+        .contact-section .div{
+            gap: 42px;
+        }
+        .contact-section .button{
+            padding: 16px 32px;
+        }
+    }
+
+}
+
+
+/* .Home-main {
     .main {
         width: 100%;
         background-color: white;
@@ -39,7 +298,7 @@
     }
 
     .set p:hover {
-        color: d#414143;
+        color: #414143;
     }
 
     .set button {
@@ -123,4 +382,4 @@
     .main-bottom-left button:hover {
         background-color: #19954e;
     }
-}
+} */
